--- a/src/components/App.css
+++ b/src/components/App.css
@@ -83,10 +83,13 @@
 .userRight {
   margin-left: 20px;
 }
-#firstBtn {
-  position: absolute;
-  margin-top: 400px;
+.firstBtn {
+  margin-top: 80px;
+  color: white;
+  border-radius: 5px;
+  border: none;
   background-color: #5558fa;
+  padding: 6px 10px;
 }
 #displayNone {
   display: none;
